engine/Torque6-Bridge/SimObjects/AssetManager.cs

using System;
using System.Runtime.InteropServices;
using Torque6_Bridge.Namespaces;

namespace Torque6_Bridge.SimObjects.Assets
{
   public unsafe class AssetManager : SimObject
   {
      public AssetManager()
      {
         ObjectPtr = Sim.WrapObject(InternalUnsafeMethods.AssetManagerCreateInstance());
      }

      public AssetManager(uint pId) : base(pId)
      {
      }

      public AssetManager(IntPtr pObjPtr) : base(pObjPtr)
      {
      }

      public AssetManager(string pName) : base(pName)
      {
      }

      public AssetManager(Sim.SimObjectPtr* pObjPtr) : base(pObjPtr)
      {
      }
      
      #region UnsafeNativeMethods

      new internal struct InternalUnsafeMethods
      {
         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerGetEchoInfo(IntPtr assetManager);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern void AssetManagerSetEchoInfo(IntPtr assetManager, bool val);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerGetIgnoreAutoUnload(IntPtr assetManager);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern void AssetManagerSetIgnoreAutoUnload(IntPtr assetManager, bool val);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern IntPtr AssetManagerCreateInstance();

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerCompileReferencedAssets(IntPtr assetManager, IntPtr moduleDefinition);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerAddModuleDeclaredAssets(IntPtr assetManager, IntPtr moduleDefinition);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerAddDeclaredAsset(IntPtr assetManager, IntPtr moduleDefinition, string assetFilePath);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern string AssetManagerAddPrivateAsset(IntPtr assetManager, IntPtr assetObject);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerRemoveDeclaredAssets(IntPtr assetManager, IntPtr moduleDefinition);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerRemoveDeclaredAsset(IntPtr assetManager, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern string AssetManagerGetAssetName(IntPtr assetManager, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern string AssetManagerGetAssetDescription(IntPtr assetManager, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern string AssetManagerGetAssetCategory(IntPtr assetManager, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern string AssetManagerGetAssetType(IntPtr assetManager, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern string AssetManagerGetAssetFilePath(IntPtr assetManager, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern string AssetManagerGetAssetPath(IntPtr assetManager, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern IntPtr AssetManagerGetAssetModule(IntPtr assetManager, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerIsAssetInternal(IntPtr assetManager, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerIsAssetPrivate(IntPtr assetManager, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerIsAssetAutoUnload(IntPtr assetManager, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerIsAssetLoaded(IntPtr assetManager, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerIsDeclaredAsset(IntPtr assetManager, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerIsReferencedAsset(IntPtr assetManager, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerRenameDeclaredAsset(IntPtr assetManager, string assetIdFrom, string assetIdTo);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerRenameReferencedAsset(IntPtr assetManager, string assetIdFrom, string assetIdTo);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern string AssetManagerAcquireAsset(IntPtr assetManager, string assetId, bool asPrivate);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerReleaseAsset(IntPtr assetManager, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern void AssetManagerPurgeAssets(IntPtr assetManager);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerDeleteAsset(IntPtr assetManager, string assetId, bool deleteLooseFiles, bool deleteDependencies);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern void AssetManagerRefreshAsset(IntPtr assetManager, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern void AssetManagerRefreshAllAssets(IntPtr assetManager, bool includeUnloaded);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerSaveAssetTags(IntPtr assetManager);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerRestoreAssetTags(IntPtr assetManager);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern IntPtr AssetManagerGetAssetTags(IntPtr assetManager);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern int AssetManagerFindAllAssets(IntPtr assetManager, IntPtr assetQuery, bool ignoreInternal, bool ignorePrivate);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern int AssetManagerFindAssetName(IntPtr assetManager, IntPtr assetQuery, string assetName, bool partialName);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern int AssetManagerFindAssetCategory(IntPtr assetManager, IntPtr assetQuery, string assetName, bool assetQueryAsSource);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern int AssetManagerFindAssetAutoUnload(IntPtr assetManager, IntPtr assetQuery, bool assetAutoUnload, bool assetQueryAsSource);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern int AssetManagerFindAssetInternal(IntPtr assetManager, IntPtr assetQuery, bool assetInternal, bool assetQueryAsSource);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern int AssetManagerFindAssetPrivate(IntPtr assetManager, IntPtr assetQuery, bool assetPrivate, bool assetQueryAsSource);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern int AssetManagerFindAssetType(IntPtr assetManager, IntPtr assetQuery, string assetType, bool assetQueryAsSource);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern int AssetManagerFindAssetDependsOn(IntPtr assetManager, IntPtr assetQuery, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern int AssetManagerFindAssetIsDependedOn(IntPtr assetManager, IntPtr assetQuery, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern int AssetManagerFindInvalidAssetReferences(IntPtr assetManager, IntPtr assetQuery);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern int AssetManagerFindTaggedAssets(IntPtr assetManager, IntPtr assetQuery, string assetTagNames, bool assetQueryAsSource);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern int AssetManagerFindAssetLooseFile(IntPtr assetManager, IntPtr assetQuery, string assetLooseFile, bool assetQueryAsSource);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerGetDeclaredAssetCount(IntPtr assetManager);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerGetReferencedAssetCount(IntPtr assetManager);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerGetLoadedInternalAssetCount(IntPtr assetManager);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerGetMaxLoadedInternalAssetCount(IntPtr assetManager);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerGetLoadedExternalAssetCount(IntPtr assetManager);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerGetMaxLoadedExternalAssetCount(IntPtr assetManager);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern void AssetManagerDumpDeclaredAssets(IntPtr assetManager);


      }
      #endregion

      #region Properties
